--- a/index.html
+++ b/index.html
@@ -305,7 +305,14 @@ $(document).ready(function()
       });
    }).triggerHandler('scroll');
 });
-</script></head>
+</script>
+
+<!-- Pixel Code for https://proof2.codehouse.host/ -->
+<script defer src="https://proof2.codehouse.host/pixel/M2Ic2SYudFYSdCLzokFKa60BRtBfOvF1"></script>
+<!-- END Pixel Code -->
+
+   
+</head>
 <body>
 <div id="wb_header">
 <div id="header">
